# polygon-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
polygon_mcp/: __init__.py  server.py
