[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polygon-mcp-server"
version = "0.1.2"
description = "MCP server for Codeforces Polygon API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polygon_api==1.1.0a2",
  "fastmcp<3",
  "patch-ng",
]

[project.scripts]
polygon-mcp = "polygon_mcp.__main__:main"

[tool.setuptools]
packages = ["polygon_mcp"]
